--- a/PML Projects/16-04 NLP project review.ipynb
+++ b/PML Projects/16-04 NLP project review.ipynb
@@ -874,23 +874,250 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pipline' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-42-72ef848c4f6d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpipline\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'pipline' is not defined"
+     "data": {
+      "text/plain": [
+       "Pipeline(memory=None,\n",
+       "         steps=[('bow',\n",
+       "                 CountVectorizer(analyzer='word', binary=False,\n",
+       "                                 decode_error='strict',\n",
+       "                                 dtype=<class 'numpy.int64'>, encoding='utf-8',\n",
+       "                                 input='content', lowercase=True, max_df=1.0,\n",
+       "                                 max_features=None, min_df=1,\n",
+       "                                 ngram_range=(1, 1), preprocessor=None,\n",
+       "                                 stop_words=None, strip_accents=None,\n",
+       "                                 token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
+       "                                 tokenizer=None, vocabulary=None)),\n",
+       "                ('tfidf',\n",
+       "                 TfidfTransformer(norm='l2', smooth_idf=True,\n",
+       "                                  sublinear_tf=False, use_idf=True)),\n",
+       "                ('model',\n",
+       "                 MultinomialNB(alpha=1.0, class_prior=None, fit_prior=True))],\n",
+       "         verbose=False)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipeline.fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = pipeline.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  0 228]\n",
+      " [  0 998]]\n",
+      "\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.00      0.00      0.00       228\n",
+      "           5       0.81      1.00      0.90       998\n",
+      "\n",
+      "    accuracy                           0.81      1226\n",
+      "   macro avg       0.41      0.50      0.45      1226\n",
+      "weighted avg       0.66      0.81      0.73      1226\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Corvus\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1437: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "C:\\Users\\Corvus\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1437: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "C:\\Users\\Corvus\\Anaconda3\\lib\\site-packages\\sklearn\\metrics\\classification.py:1437: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
      ]
     }
    ],
    "source": [
-    "pipline.fit(X_train,y_train)"
+    "print(confusion_matrix(y_test,pred))\n",
+    "print('\\n')\n",
+    "print(classification_report(y_test,pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline = Pipeline([\n",
+    "    ('bow',CountVectorizer()),\n",
+    "    ('tfidf',TfidfTransformer()),\n",
+    "    ('model',KNeighborsClassifier())\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = yelp_class['text']\n",
+    "y=yelp_class['stars']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=101)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline.fit(X_train,y_train)\n",
+    "pred = pipeline.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[117 111]\n",
+      " [ 39 959]]\n",
+      "\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.75      0.51      0.61       228\n",
+      "           5       0.90      0.96      0.93       998\n",
+      "\n",
+      "    accuracy                           0.88      1226\n",
+      "   macro avg       0.82      0.74      0.77      1226\n",
+      "weighted avg       0.87      0.88      0.87      1226\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(confusion_matrix(y_test,pred))\n",
+    "print('\\n')\n",
+    "print(classification_report(y_test,pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#better than last model not as good as our first. \n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "pipeline = Pipeline([\n",
+    "    ('bow',CountVectorizer()),\n",
+    "    ('tfidf',TfidfTransformer()),\n",
+    "    ('model',RandomForestClassifier())\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = yelp_class['text']\n",
+    "y=yelp_class['stars']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=101)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Corvus\\Anaconda3\\lib\\site-packages\\sklearn\\ensemble\\forest.py:245: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
+      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "pipeline.fit(X_train,y_train)\n",
+    "pred = pipeline.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 73 155]\n",
+      " [ 18 980]]\n",
+      "\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.80      0.32      0.46       228\n",
+      "           5       0.86      0.98      0.92       998\n",
+      "\n",
+      "    accuracy                           0.86      1226\n",
+      "   macro avg       0.83      0.65      0.69      1226\n",
+      "weighted avg       0.85      0.86      0.83      1226\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(confusion_matrix(y_test,pred))\n",
+    "print('\\n')\n",
+    "print(classification_report(y_test,pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# after including several models of trial and error \n",
+    "# it seems multinomial is our most effective method. "
    ]
   },
   {
