--- a/PML Projects/18-04 MNIST .ipynb
+++ b/PML Projects/18-04 MNIST .ipynb
@@ -149,7 +149,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x28aa394a7b8>"
+       "<matplotlib.image.AxesImage at 0x27c1425c710>"
       ]
      },
      "execution_count": 8,
@@ -195,194 +195,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.45490196, 0.49019608, 0.67058824, 1.        , 1.        ,\n",
-       "        0.58823529, 0.36470588, 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.6627451 ,\n",
-       "        0.99215686, 0.99215686, 0.99215686, 0.99215686, 0.99215686,\n",
-       "        0.99215686, 0.85490196, 0.11764706, 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.6627451 , 0.99215686,\n",
-       "        0.99215686, 0.99215686, 0.83529412, 0.55686275, 0.69019608,\n",
-       "        0.99215686, 0.99215686, 0.47843137, 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.20392157, 0.98039216, 0.99215686,\n",
-       "        0.82352941, 0.1254902 , 0.04705882, 0.        , 0.02352941,\n",
-       "        0.80784314, 0.99215686, 0.54901961, 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.30196078, 0.98431373, 0.82352941,\n",
-       "        0.09803922, 0.        , 0.        , 0.        , 0.47843137,\n",
-       "        0.97254902, 0.99215686, 0.25490196, 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.12156863, 0.07058824,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.81960784,\n",
-       "        0.99215686, 0.99215686, 0.25490196, 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.45882353, 0.96862745,\n",
-       "        0.99215686, 0.77647059, 0.03921569, 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.29803922, 0.96862745, 0.99215686,\n",
-       "        0.90588235, 0.24705882, 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.50196078, 0.99215686, 0.99215686,\n",
-       "        0.56470588, 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.69019608, 0.96470588, 0.99215686, 0.62352941,\n",
-       "        0.04705882, 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.09803922, 0.91764706, 0.99215686, 0.91372549, 0.1372549 ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.77647059, 0.99215686, 0.99215686, 0.55294118, 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.30588235,\n",
-       "        0.97254902, 0.99215686, 0.74117647, 0.04705882, 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.0745098 , 0.78431373,\n",
-       "        0.99215686, 0.99215686, 0.55294118, 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.5254902 , 0.99215686,\n",
-       "        0.99215686, 0.67843137, 0.04705882, 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.97254902, 0.99215686,\n",
-       "        0.99215686, 0.09803922, 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.97254902, 0.99215686,\n",
-       "        0.99215686, 0.16862745, 0.07843137, 0.07843137, 0.07843137,\n",
-       "        0.07843137, 0.01960784, 0.        , 0.01960784, 0.07843137,\n",
-       "        0.07843137, 0.14509804, 0.58823529, 0.58823529, 0.58823529,\n",
-       "        0.57647059, 0.03921569, 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.97254902, 0.99215686,\n",
-       "        0.99215686, 0.99215686, 0.99215686, 0.99215686, 0.99215686,\n",
-       "        0.99215686, 0.65882353, 0.56078431, 0.65098039, 0.99215686,\n",
-       "        0.99215686, 0.99215686, 0.99215686, 0.99215686, 0.99215686,\n",
-       "        0.99215686, 0.48235294, 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.68235294, 0.99215686,\n",
-       "        0.99215686, 0.99215686, 0.99215686, 0.99215686, 0.99215686,\n",
-       "        0.99215686, 0.99215686, 0.99215686, 0.99215686, 0.99215686,\n",
-       "        0.97647059, 0.96862745, 0.96862745, 0.6627451 , 0.45882353,\n",
-       "        0.45882353, 0.22352941, 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.4627451 ,\n",
-       "        0.48235294, 0.48235294, 0.48235294, 0.65098039, 0.99215686,\n",
-       "        0.99215686, 0.99215686, 0.60784314, 0.48235294, 0.48235294,\n",
-       "        0.16078431, 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        ],\n",
-       "       [0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        , 0.        , 0.        ,\n",
-       "        0.        , 0.        , 0.        ]])"
+       "array([0.        , 0.        , 0.        , 0.        , 0.        ,\n",
+       "       0.        , 0.        , 0.        , 0.        , 0.4627451 ,\n",
+       "       0.48235294, 0.48235294, 0.48235294, 0.65098039, 0.99215686,\n",
+       "       0.99215686, 0.99215686, 0.60784314, 0.48235294, 0.48235294,\n",
+       "       0.16078431, 0.        , 0.        , 0.        , 0.        ,\n",
+       "       0.        , 0.        , 0.        ])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x_test[1]"
+    "x_test[1][22]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,48 +244,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W0731 13:13:37.387720 14408 deprecation.py:323] From C:\\Users\\Corvus\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\ops\\math_grad.py:1250: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Train on 60000 samples\n",
       "Epoch 1/12\n",
-      "60000/60000 [==============================] - 2s 40us/sample - loss: 0.0655 - accuracy: 0.9789\n",
+      "60000/60000 [==============================] - 3s 44us/sample - loss: 0.2992 - accuracy: 0.9131\n",
       "Epoch 2/12\n",
-      "60000/60000 [==============================] - 2s 40us/sample - loss: 0.0581 - accuracy: 0.9810\n",
+      "60000/60000 [==============================] - 2s 41us/sample - loss: 0.1411 - accuracy: 0.9575\n",
       "Epoch 3/12\n",
-      "60000/60000 [==============================] - 2s 41us/sample - loss: 0.0533 - accuracy: 0.9821\n",
+      "60000/60000 [==============================] - 2s 40us/sample - loss: 0.1057 - accuracy: 0.9682\n",
       "Epoch 4/12\n",
-      "60000/60000 [==============================] - 2s 39us/sample - loss: 0.0483 - accuracy: 0.9839\n",
+      "60000/60000 [==============================] - 3s 44us/sample - loss: 0.0874 - accuracy: 0.9732\n",
       "Epoch 5/12\n",
-      "60000/60000 [==============================] - 2s 39us/sample - loss: 0.0434 - accuracy: 0.9858\n",
+      "60000/60000 [==============================] - 3s 47us/sample - loss: 0.0745 - accuracy: 0.9768\n",
       "Epoch 6/12\n",
-      "60000/60000 [==============================] - 2s 39us/sample - loss: 0.0422 - accuracy: 0.9859\n",
+      "60000/60000 [==============================] - 3s 45us/sample - loss: 0.0643 - accuracy: 0.9790\n",
       "Epoch 7/12\n",
-      "60000/60000 [==============================] - 2s 39us/sample - loss: 0.0377 - accuracy: 0.9872\n",
+      "60000/60000 [==============================] - 3s 44us/sample - loss: 0.0573 - accuracy: 0.9816\n",
       "Epoch 8/12\n",
-      "60000/60000 [==============================] - 2s 39us/sample - loss: 0.0368 - accuracy: 0.9869\n",
+      "60000/60000 [==============================] - 3s 45us/sample - loss: 0.0519 - accuracy: 0.9830\n",
       "Epoch 9/12\n",
-      "60000/60000 [==============================] - 3s 43us/sample - loss: 0.0337 - accuracy: 0.9884\n",
+      "60000/60000 [==============================] - 3s 54us/sample - loss: 0.0474 - accuracy: 0.9846\n",
       "Epoch 10/12\n",
-      "60000/60000 [==============================] - 2s 41us/sample - loss: 0.0354 - accuracy: 0.9880\n",
+      "60000/60000 [==============================] - 3s 47us/sample - loss: 0.0425 - accuracy: 0.9855\n",
       "Epoch 11/12\n",
-      "60000/60000 [==============================] - 2s 40us/sample - loss: 0.0313 - accuracy: 0.9893\n",
+      "60000/60000 [==============================] - 3s 42us/sample - loss: 0.0399 - accuracy: 0.9868\n",
       "Epoch 12/12\n",
-      "60000/60000 [==============================] - 2s 39us/sample - loss: 0.0300 - accuracy: 0.9895\n",
-      "10000/10000 [==============================] - 0s 18us/sample - loss: 0.0773 - accuracy: 0.9804\n"
+      "60000/60000 [==============================] - 2s 41us/sample - loss: 0.0388 - accuracy: 0.9868\n",
+      "10000/10000 [==============================] - 0s 23us/sample - loss: 0.0719 - accuracy: 0.9798\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.07734624933363811, 0.9804]"
+       "[0.07188925748027396, 0.9798]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
