--- a/PML Projects/TFlow 2 estimators.ipynb
+++ b/PML Projects/TFlow 2 estimators.ipynb
@@ -257,25 +257,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['sepal_length', 'sepal_width', 'petal_length', 'petal_width'], dtype='object')"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +290,7 @@
     "    \n",
     "    # Shuffle and repeat if you are in training mode\n",
     "    if training:\n",
-    "        dataset = dataset.shufflle(1000).repeat()\n",
+    "        dataset = dataset.shuffle(1000).repeat()\n",
     "    return dataset.batch(batch_size)"
    ]
   },
@@ -315,6 +304,165 @@
     "for key in train.keys():\n",
     "    feat_cols.append(tf.feature_column.numeric_column(key=key))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W0731 17:41:53.452425  7516 estimator.py:1811] Using temporary folder as model directory: C:\\Users\\Corvus\\AppData\\Local\\Temp\\tmpbkerz81r\n"
+     ]
+    }
+   ],
+   "source": [
+    "#build a dnn with 2 hidden layers with 30 and 10 hidden nodes each\n",
+    "\n",
+    "classifier = tf.estimator.DNNClassifier(\n",
+    "    feature_columns=feat_cols,\n",
+    "    #hidden layers of 10 nodes each\n",
+    "    hidden_units = [30,10],\n",
+    "    # the model must choose one of three classes\n",
+    "    n_classes = 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#now to train model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "W0731 17:41:53.490296  7516 deprecation.py:323] From C:\\Users\\Corvus\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\training\\training_util.py:236: Variable.initialized_value (from tensorflow.python.ops.variables) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use Variable.read_value. Variables in 2.X are initialized automatically both in eager and graph (inside tf.defun) contexts.\n",
+      "W0731 17:41:54.134223  7516 deprecation.py:323] From C:\\Users\\Corvus\\Anaconda3\\lib\\site-packages\\tensorflow_estimator\\python\\estimator\\head\\base_head.py:574: to_float (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use `tf.cast` instead.\n",
+      "W0731 17:41:54.248923  7516 deprecation.py:506] From C:\\Users\\Corvus\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\keras\\optimizer_v2\\adagrad.py:105: calling Constant.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
+      "W0731 17:41:54.400825  7516 deprecation.py:323] From C:\\Users\\Corvus\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\ops\\array_ops.py:1340: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow_estimator.python.estimator.canned.dnn.DNNClassifierV2 at 0x1f9fb41a358>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifier.train(\n",
+    "    input_fn=lambda: input_fn(train,y_train,training=True), steps=5000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "W0731 17:42:02.603203  7516 deprecation.py:323] From C:\\Users\\Corvus\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\training\\saver.py:1276: checkpoint_exists (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use standard file APIs to check for files with this prefix.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test accuracy: 0.867\n"
+     ]
+    }
+   ],
+   "source": [
+    "#evaluating the model\n",
+    "\n",
+    "eval_result =classifier.evaluate(\n",
+    "input_fn=lambda: input_fn(test,y_test,training=False))\n",
+    "\n",
+    "print('test accuracy: {accuracy:0.3f}'.format(**eval_result))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate predictions from the model\n",
+    "expected = ['Setosa', 'Versicolor', 'Virginica']\n",
+    "predict_x = {\n",
+    "    'sepal_length': [5.1, 5.9, 6.9],\n",
+    "    'sepal_width':  [3.3, 3.0, 3.1],\n",
+    "    'petal_length': [1.7, 4.2, 5.4],\n",
+    "    'petal_width':  [0.5, 1.5, 2.1],\n",
+    "}\n",
+    "\n",
+    "def input_fn(features,batch_size=256):\n",
+    "    \"\"\"input function for predictions\"\"\"\n",
+    "    #convert inputs to dataset w/ labels\n",
+    "    return tf.data.Dataset.from_tensor_slices(dict(features)).batch(batch_size)\n",
+    "  \n",
+    "predictions = classifier.predict(\n",
+    "    input_fn=lambda: input_fn(predict_x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction is \"Setosa\" (77.2%), expected \"Setosa\"\n",
+      "Prediction is \"Versicolor\" (46.9%), expected \"Versicolor\"\n",
+      "Prediction is \"Virginica\" (61.3%), expected \"Virginica\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "for pred_dict, expec in zip(predictions, expected):\n",
+    "    class_id = pred_dict['class_ids'][0]\n",
+    "    probability = pred_dict['probabilities'][class_id]\n",
+    "\n",
+    "    print('Prediction is \"{}\" ({:.1f}%), expected \"{}\"'.format(\n",
+    "        SPECIES[class_id], 100 * probability, expec))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
